tests/fixtures/typeck/function_argument_count_mismatch.diag
error: function argument count mismatch
  --> function_argument_count_mismatch.veyl:6:17
   |
  6 |     let value = add_one();
   |                 ^^^^^^^^^
